--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "body-parser": "^1.15.1",
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "0.7.1",
+    "ember-autox-core": "0.1.0",
     "ember-cli": "2.5.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
@@ -27,22 +29,34 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
+    "ember-cli-moment-shim": "1.2.0",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-concurrency": "0.7.1",
     "ember-data": "^2.5.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-inflector": "1.9.4",
     "ember-load-initializers": "^0.5.1",
+    "ember-lodash": "0.0.7",
+    "ember-moment": "6.1.0",
+    "ember-polymorphica": "0.1.0",
     "ember-resolver": "^2.0.3",
+    "ember-router-dsl": "0.1.1",
     "ember-try": "^0.2.2",
-    "loader.js": "^4.0.1"
+    "express": "^4.13.4",
+    "glob": "^4.5.3",
+    "loader.js": "^4.0.1",
+    "lodash": "^4.12.0",
+    "morgan": "^1.7.0"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
+    "ember-cli-coffeescript": "1.13.2",
     "ember-cli-babel": "^5.1.6"
   },
   "ember-addon": {
